--- a/src/app/backOffice/header/header/header.component.html
+++ b/src/app/backOffice/header/header/header.component.html
@@ -3,7 +3,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="/assets/OIP (1).jpeg" alt="">
+        <img src="/assets/link.png" alt="Logo" class="logo-image">
         <span class="d-none d-lg-block"></span>
       </a>
     </div><!-- End Logo -->
