--- a/src/app/frontOffice/header/header-user/header-user.component.html
+++ b/src/app/frontOffice/header/header-user/header-user.component.html
@@ -23,7 +23,9 @@
               <li><a  class="nav-link">Matches</a></li>
               <li><a  class="nav-link">Players</a></li>
               <li><a  class="nav-link">Blog</a></li>
-              <li><a  class="nav-link">Contact</a></li>
+               <li *ngIf="!isLoggedIn"><a class="nav-link" [routerLink]="'/login'">Login</a></li>
+              <li *ngIf="isLoggedIn" (click)="logout()"><a class="nav-link">Logout</a></li>
+
             </ul>
           </nav>
 
