--- a/src/app/frontOffice/header/header-user/header-user.component.html
+++ b/src/app/frontOffice/header/header-user/header-user.component.html
@@ -23,7 +23,7 @@
               <li><a  class="nav-link">Matches</a></li>
               <li><a  class="nav-link">Players</a></li>
               <li><a  class="nav-link">Blog</a></li>
-               <li *ngIf="!isLoggedIn"><a class="nav-link" [routerLink]="'/login'">Login</a></li>
+               <li *ngIf="!isLoggedIn"><a class="nav-link" [routerLink]="'/user/login'">Login</a></li>
               <li *ngIf="isLoggedIn" (click)="logout()"><a class="nav-link">Logout</a></li>
 
             </ul>
@@ -40,13 +40,9 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-5 ml-auto">
-          <h1 class="text-white">World Cup Event</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, molestias repudiandae pariatur.</p>
-          <div id="date-countdown"></div>
-          <p>
-            <a href="#" class="btn btn-primary py-3 px-4 mr-3">Book Ticket</a>
-            <a href="#" class="more light">Learn More</a>
-          </p>  
+          <h1 class="text-white"> LinkUp Sport </h1>
+         
+            
         </div>
       </div>
     </div>
