--- a/src/app/frontOffice/auth/RolesSelection/roleselection/roleselection.component.html
+++ b/src/app/frontOffice/auth/RolesSelection/roleselection/roleselection.component.html
@@ -2,19 +2,19 @@
     <h2>Choisissez votre rôle</h2>
     <div class="cards-container">
       <!-- Superviseur Card -->
-      <div class="role-card" (click)="selectRole('SUPERVISEUR')">
+      <div class="role-card" (click)="selectRole('ROLE_SUPERVISEUR')">
         <h3>Superviseur</h3>
         <p>Supervisez les activités et gérez les équipes efficacement.</p>
       </div>
   
       <!-- Organisateur Card -->
-      <div class="role-card" (click)="selectRole('ORGANISATEUR')">
+      <div class="role-card" (click)="selectRole('ROLE_ORGANISATEUR')">
         <h3>Organisateur</h3>
         <p>Planifiez et organisez des événements avec succès.</p>
       </div>
   
       <!-- Responsable Card -->
-      <div class="role-card" (click)="selectRole('RESPONSABLE')">
+      <div class="role-card" (click)="selectRole('ROLE_RESPONSABLE')">
         <h3>Responsable</h3>
         <p>Assumez la responsabilité et prenez des décisions cruciales.</p>
       </div>
