--- a/src/app/backOffice/header/header/header.component.html
+++ b/src/app/backOffice/header/header/header.component.html
@@ -1,44 +1,33 @@
 <!-- ======= Header ======= -->
 <header id="header" class="header fixed-top d-flex align-items-center">
-
-    <div class="d-flex align-items-center justify-content-between">
+  <div class="d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="/assets/link.png" alt="Logo" class="logo-image">
-        <span class="d-none d-lg-block"></span>
+          <img src="/assets/link.png" alt="Logo" class="logo-image">
+          <span class="d-none d-lg-block"></span>
       </a>
-    </div><!-- End Logo -->
+  </div><!-- End Logo -->
 
-    <!--<div class="search-bar">
-      <form class="search-form d-flex align-items-center" method="POST" action="#">
-        <input type="text" name="query" placeholder="Search" title="Enter search keyword">
-        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-      </form>
-    </div> --><!-- End Search Bar -->
-
-    <nav class="header-nav ms-auto">
+  <nav class="header-nav ms-auto">
       <ul class="d-flex align-items-center">
+          <li class="nav-item d-block d-lg-none">
+              <a class="nav-link nav-icon search-bar-toggle" href="#">
+                  <i class="bi bi-search"></i>
+              </a>
+          </li><!-- End Search Icon -->
 
-        <li class="nav-item d-block d-lg-none">
-          <a class="nav-link nav-icon search-bar-toggle " href="#">
-            <i class="bi bi-search"></i>
-          </a>
-        </li><!-- End Search Icon-->
-
-        
-
-        
-
-        <li class="nav-item dropdown pe-3">
-
-          <a class="nav-link nav-profile d-flex align-items-center pe-0"  data-bs-toggle="dropdown">
-            <img src="/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">W. Zerzeri</span>
-          </a><!-- End Profile Iamge Icon -->
-
-          
-        </li><!-- End Profile Nav -->
-
+          <!-- Bouton de déconnexion avec icône -->
+          <li class="nav-item dropdown pe-3">
+            <li *ngIf="!isLoggedIn">
+              <a class="nav-link login-btn" [routerLink]="'/user/login'">
+                <i class="bi bi-person"></i> Login
+              </a>
+            </li>
+            <li *ngIf="isLoggedIn" (click)="logout()">
+              <a class="nav-link logout-btn">
+                <i class="bi bi-box-arrow-right"></i> Logout
+              </a>
+            </li>
+         
       </ul>
-    </nav><!-- End Icons Navigation -->
-
-  </header><!-- End Header -->
+  </nav><!-- End Icons Navigation -->
+</header><!-- End Header -->
