--- a/src/app/frontOffice/auth/register/register/register.component.html
+++ b/src/app/frontOffice/auth/register/register/register.component.html
@@ -48,7 +48,7 @@
 
     <!-- Rôle sélectionné -->
     <!-- Rôle sélectionné -->
-<div class="form-group">
+<!--<div class="form-group">
   <div class="label-container">
     <label for="role">Rôle :</label>
   </div>
@@ -63,7 +63,7 @@
       readonly
     />
   </div>
-</div>
+</div>-->
 
 
     <!-- Phone Number -->
