--- a/src/app/frontOffice/auth/RolesSelection/roleselection/roleselection.component.html
+++ b/src/app/frontOffice/auth/RolesSelection/roleselection/roleselection.component.html
@@ -10,13 +10,13 @@
       <!-- Organisateur Card -->
       <div class="role-card" (click)="selectRole('ROLE_ORGANISATEUR')">
         <h3>Organisateur</h3>
-        <p>Planifiez et organisez des événements avec succès.</p>
+        <p>Planifiez et organisez les événements de football.</p>
       </div>
   
       <!-- Responsable Card -->
       <div class="role-card" (click)="selectRole('ROLE_RESPONSABLE')">
         <h3>Responsable</h3>
-        <p>Assumez la responsabilité et prenez des décisions cruciales.</p>
+        <p>Gérez les académies et les joueurs et participez aux compétitions.</p>
       </div>
     </div>
   </div>
