--- a/src/app/frontOffice/header/header-user/header-user.component.html
+++ b/src/app/frontOffice/header/header-user/header-user.component.html
@@ -23,9 +23,22 @@
               <li><a  class="nav-link">Matches</a></li>
               <li><a  class="nav-link">Players</a></li>
               <li><a  class="nav-link">Blog</a></li>
-               <li *ngIf="!isLoggedIn"><a class="nav-link" [routerLink]="'/user/login'">Login</a></li>
-              <li *ngIf="isLoggedIn" (click)="logout()"><a class="nav-link">Logout</a></li>
-
+              
+                <!-- Bouton Login visible si l'utilisateur n'est pas connecté -->
+              
+                <!-- Bouton Logout visible si l'utilisateur est connecté -->
+                <li *ngIf="isLoggedIn" (click)="logout()">
+                  <a class="nav-link logout-btn">
+                    <i class="bi bi-box-arrow-right"></i> Logout
+                  </a>
+                </li>
+              
+                <li *ngIf="!isLoggedIn">
+                  <a class="nav-link login-btn" [routerLink]="'/user/login'">
+                    <i class="bi bi-person"></i> Login
+                  </a>
+                </li>
+              
             </ul>
           </nav>
 
@@ -36,7 +49,7 @@
     </div>
 
   </header>
-  <div class="hero overlay" style="background-image: url('/assets/front/images/bg_3.jpg');">
+   <div class="hero overlay" style="background-image: url('/assets/front/images/bg_3.jpg');">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-5 ml-auto">
