--- a/src/app/backOffice/side/side/side.component.html
+++ b/src/app/backOffice/side/side/side.component.html
@@ -8,26 +8,26 @@
       <li class="nav-item">
         <a class="nav-link collapsed" >
           <i class="bi bi-card-list"></i>
-          <span>Project List</span>
+          <span>Liste des academies</span>
         </a>
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" >
-          <i class="bi bi-card-list"></i><span>Team List</span>
+          <i class="bi bi-card-list"></i><span>Liste des tournois</span>
         </a>
       </li><!-- End Components Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" >
-          <i class="bi bi-journal-text"></i><span>New Project</span>
+          <i class="bi bi-journal-text"></i><span>Ajout d'academie</span>
         </a>
        
       </li><!-- End Forms Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse">
-          <i class="bi bi-person-lines-fill"></i><span>New Team</span>
+          <i class="bi bi-person-lines-fill"></i><span>Organiser un tournoi</span>
         </a>
       </li><!-- End Tables Nav -->
       
