--- a/src/app/frontOffice/auth/register/register/register.component.html
+++ b/src/app/frontOffice/auth/register/register/register.component.html
@@ -111,26 +111,30 @@
     </div>
 
     <!-- Password -->
-    <div class="form-group">
-      <div class="label-container">
-        <label for="password">Mot de passe :</label>
-      </div>
-      <div class="input-container">
-        <input
-          type="password"
-          id="password"
-          name="password"
-          [(ngModel)]="user.password"
-          #password="ngModel"
-          required
-          class="form-control"
-          placeholder="Créez un mot de passe sécurisé"
-        />
-      </div>
-      <div *ngIf="password.touched && password.invalid" class="error-message">
-        <small *ngIf="password.errors?.['required']">Mot de passe requis.</small>
-      </div>
-    </div>
+<div class="form-group">
+  <div class="label-container">
+    <label for="password">Mot de passe :</label>
+  </div>
+  <div class="input-container">
+    <input
+      type="password"
+      id="password"
+      name="password"
+      [(ngModel)]="user.password"
+      #password="ngModel"
+      required
+      pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+      class="form-control"
+      placeholder="Créez un mot de passe sécurisé"
+    />
+  </div>
+  <div *ngIf="password.touched && password.invalid" class="error-message">
+    <small *ngIf="password.errors?.['required']">Mot de passe requis.</small>
+    <small *ngIf="password.errors?.['pattern']">
+      Le mot de passe doit contenir au moins 8 caractères, incluant des lettres et des chiffres.
+    </small>
+  </div>
+</div>
 
 
     <!-- Submit Button -->
