--- a/src/app/backOffice/match/displaymatch/displaymatch.component.html
+++ b/src/app/backOffice/match/displaymatch/displaymatch.component.html
@@ -4,8 +4,8 @@
   <div class="match-card" *ngFor="let match of matches">
     <div class="match-header">
       <p>
-        <strong>Date:</strong> {{ match.datetime | date: 'yyyy-MM-dd' }}
-        <strong>Time:</strong> {{ match.datetime | date: 'HH:mm' }}
+        <strong></strong> {{ match.datetime | date: 'yyyy-MM-dd' }}
+        <strong></strong> {{ match.datetime | date: 'HH:mm' }}
       </p>
       
     </div>
