--- a/src/app/backOffice/match/detailsmatch/detailsmatch/detailsmatch.component.html
+++ b/src/app/backOffice/match/detailsmatch/detailsmatch/detailsmatch.component.html
@@ -21,12 +21,7 @@
       <h2>{{ matchDetails.score }}</h2>
       <div class="timer">
         <p>Timer: {{ timers[matchDetails.id]?.timer }}</p>
-        <button class="start-button" (click)="startTimer(matchDetails.id, matchDetails.duree_mitemps)">
-          Start
-        </button>
-        <button class="stop-button" (click)="stopTimer(matchDetails.id)">
-          Stop
-        </button>
+        
       </div>
     </div>
 
@@ -39,9 +34,7 @@
     </div>
   </div>
   <div class="score-section">
-    <h2>{{ matchDetails.score }}</h2>
     <div class="timer">
-      <p>Timer: {{ timers[matchDetails.id]?.timer }}</p>
       <button class="start-button" (click)="startTimer(matchDetails.id, matchDetails.duree_mitemps)">
         Start
       </button>
@@ -80,6 +73,23 @@
         <button (click)="closeGoalModal()">Annuler</button>
       </div>
     </div>
+  </div>
+  <div class="buts-marques">
+    <h3>Buts Marqués</h3>
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let but of butsMarques">
+          <td>⚽{{ but.joueur.nom }}</td>
+          <td>{{ but.temps }}</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
   
 
